BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Event_Expense_BMS_Core__c.object
<CustomObject>
    <fields>
        <fullName>Amount_BMS_CORE__c</fullName>
        <label>Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description_BMS_CORE__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_BMS_CORE__c</fullName>
        <label>Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipName>Event_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expense_Category_BMS_CORE__c</fullName>
        <label>Expense Category</label>
        <picklist>
            <picklistValues>
                <fullName>Accreditation Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honorarium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expense_Date_BMS_CORE__c</fullName>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT( Event_BMS_CORE__r.Owner_Lookup_BMS_CORE__r.User_Source_Country_BMS_CORE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Source Country</label>
        <type>Text</type>
    </fields>
    <label>Meeting Expense</label>
    <nameField>
        <displayFormat>EE-{00000}</displayFormat>
        <label>Meeting Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Expenses</pluralLabel>
    <recordTypes>
        <fullName>Concur</fullName>
        <active>true</active>
        <description>Concur</description>
        <label>Concur</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAP</fullName>
        <active>true</active>
        <description>SAP</description>
        <label>SAP</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>